# Protest_Labelling

./: .gitignore  pyproject.toml
backlog/: data_cleaning.ipynb  labeling_triggerwords.ipynb
backlog/students_exploration/: Graphs.ipynb  Unsupervised_LDA.ipynb  violence_probability.ipynb  zero_shot_classification.ipynb
backlog/supervised_transformer_labeling/: labeling_by_transformer_model.ipynb  transformers_model_finetuner.py
data/manual_labelled_data/: manual_labeled_unknown.csv  random_unknown_labeled.csv
pipeline/: 1-preprocess.ipynb  2-transformers_model_finetuner.py  3-labeling_by_transformer_model.ipynb  preprocess.ipynb
pipeline/finetuner/: __init__.py  data.py  model.py  ollama.py  report.py  triggers.py
research/mislabeled/: audit.ipynb  mislabeled_rows.csv
research/model_comparison_on_unseen_data/: comparison.ipynb  info.txt  prediction_analysis.ipynb
research/students_exploration/: Unsupervised_bertopic.ipynb  embedding_similarity_search.ipynb  violence_model_binary.ipynb  zero_shot_classification_top3.ipynb
supervised_transformer_labeling/: dataset_balancing.ipynb  labeling_by_transformer_model.ipynb  transformers_model_finetuner.py
